# qtea

./: .env.example  .gitignore  .hitl-ledger.jsonl  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  GETTING_STARTED.md  README.md  how  pyproject.toml  ruff.toml  test_flet_minimal.py  test_flet_routing.py
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml
agents/: assertion-intent-judge.agent.md  bug-report-classifier.agent.md  codegen-exemplar-writer.agent.md  codegen-pom-extender.agent.md  codegen-rules.md  codegen-test-writer.agent.md  codegen-violation-fixer.agent.md  codegen-violation-fixer.prompt.md  critical-thinking.agent.md  debug.agent.md  design-editor.agent.md  jira-to-ai-spec.agent.md  live-explore-ambiguity-judge.agent.md  live-explore-reveal-judge.agent.md  live-explore-target-extractor.agent.md  plan-editor.agent.md  playwright-tester.agent.md  polyglot-test-fixer.agent.md  polyglot-test-planner.agent.md  polyglot-test-researcher.agent.md  polyglot-test-researcher.prompt.md  polyglot-test-tester.agent.md  principal-software-engineer.agent.md  purpose-fidelity-judge.agent.md  qa-orchestrator.agent.md  qa-orchestrator.instructions.md  refine-format-fixer.agent.md  refine-spec.agent.md  site-explorer.agent.md  spec-intake.agent.md  strategy-editor.agent.md  tbd-intent-editor.agent.md  tbd-intent-scorer.agent.md  test-architect.agent.md  test-automation-architect.agent.md  test-designer.agent.md  test-designer.prompt.md  test-manager.agent.md  test-manager.prompt.md  ticket-to-ai-spec.agent.md  (+2 more)
agents/.claude/: settings.local.json
docs/: qa-orchestrator.agent.md  qa-orchestrator.instructions.md
examples/: bug-classification-example.md  login-feature-test.md
schemas/: assertion-verdict.schema.json  bug-candidates.schema.json  bug-reports.schema.json  code-modification-plan.schema.json  dev-locators.schema.json  dom-comparison.schema.json  incident-record.schema.json  interceptors.schema.json  live-explore-targets.schema.json  live-map.schema.json  locator-cache.schema.json  locator-resolution.schema.json  parse-check-result.schema.json  plan.schema.json  purpose-fidelity-verdict.schema.json  reconcile-result.schema.json  refined-spec.schema.json  report-data.schema.json  research.schema.json  run-results.schema.json  static-check-result.schema.json  tbd-index.schema.json  test-design.schema.json  test-strategy.schema.json  tests-with-tbd.schema.json  traceability-matrix.schema.json  xray-mapping.schema.json
skills/acquire-codebase-knowledge/: SKILL.md
skills/analyze-sut-structure/: SKILL.md
skills/detect-test-framework/: SKILL.md
skills/detect-test-framework/scripts/: detect_framework.py
skills/diagnose-test-failure/: SKILL.md
skills/playwright-explore-website/: SKILL.md
skills/stack-catalog/: SKILL.md
skills/webapp-testing/: SKILL.md
src/qtea/: __init__.py  __main__.py  _ast_utils.py  _sut_git.py  ado_client.py  agent_models.yaml  assertion_judge.py  auth_capture.py  checkpoints.py  claude_runner.py  cli.py  codegen_body_verify.py  codegen_pom_hygiene.py  codegen_reconcile.py  config.py  confluence_client.py  context_images.py  coverage_audit.py  doctor.py  env_resolver.py  failure_classifiers.py  headed_auth_capture.py  hitl.py  incident_memory.py  jira_client.py  jit_resolver.py  logging_setup.py  mcp_manager.py  md_parser.py  metrics.py  node_env.py  overlay_handling.py  parse_check.py  pipeline.py  playwright_config_editor.py  preflight.py  pricing.py  proxy.py  purpose_judge.py  redaction.py  (+13 more)
src/qtea/llm/: __init__.py  browser_agent.py  protocols.py  reasoning.py
src/qtea/report/: allure_writer.py  data_builder.py  html_renderer.py
src/qtea/runtime/: __init__.py  dev_locators.py
src/qtea/steps/: __init__.py  base.py  s01_intake.py  s02_refine.py  s03_plan.py  s04_strategy.py  s05_xray.py  s06_research.py  s07_auth_prewarm.py  s07_live_explore.py  s07_test_architect.py  s08_codegen.py  s09_execute.py  s10_bug_classifier.py  s11_report.py
src/qtea/ui/: __init__.py  __main__.py  app.py  event_bridge.py  hitl_bridge.py  review_gate_bridge.py  state.py  theme.py  workspaces.py
src/worca_t/: __init__.py  __main__.py  _ast_utils.py  _sut_git.py  agent_models.yaml  auth_capture.py  auth_helpers.py  checkpoints.py  claude_runner.py  cli.py  codegen_reconcile.py  config.py  coverage_audit.py  doctor.py  env_resolver.py  failure_classifiers.py  hitl.py  jira_client.py  jit_resolver.py  locator_patching.py  logging_setup.py  mcp_manager.py  md_parser.py  metrics.py  node_env.py  pipeline.py  preflight.py  pricing.py  proxy.py  resolver_server.py  review_gate.py  schemas.py  stack_profile.py  static_check.py  storage_state.py  sut_inventory.py  tbd_scanner.py  test_indexer.py  test_runner.py  url_resolver.py  (+1 more)
src/worca_t/llm/: __init__.py  browser_agent.py  file_agent.py  (+2 more)
templates/: bug-report-template.md  edge-case-checklist.md  test-design-template.md  test-strategy-template.md
tests/: conftest.py
tests/unit/: _fake_anthropic.py  _fake_claude.py  _sut_setup.py  test_ado_client.py  test_assertion_judge.py  test_auth_capture.py  test_base_retry_classifier_integration.py  test_bosch_proxy.py  test_bug_candidates_schema.py  test_check_no_secret_exposure.py  test_checkpoints.py  test_claude_runner.py  test_claude_runner_api_retry.py  test_claude_runner_stderr.py  test_cli_context.py  test_codegen_body_verify.py  test_codegen_pom_hygiene.py  test_codegen_reconcile.py  test_config.py  test_confluence_client.py  test_context_images.py  test_core.py  test_coverage_audit.py  test_coverage_backcompat.py  test_coverage_parsers.py  test_coverage_retry_step4.py  test_coverage_retry_steps_2_3.py  test_debug_fix.py  test_dev_locators.py  test_dev_pool_quarantine.py  test_doctor.py  test_env_replay.py  test_env_resolver.py  test_failure_classifiers.py  test_headed_auth_capture.py  test_hitl.py  test_indexer.py  test_jira_client.py  test_jit_resolver.py  test_locator_cache_schema.py  (+69 more)
tools/: check_md_size.py  check_no_secret_exposure.py  check_no_sut_tokens.py  rename_to_qtea.py
tools/hooks/: update_changelog.py
(+80 files in other folders)
