[project]
name = "worca-t"
version = "0.1.2"
description = "Worca-T - Fully autonomous QA SDLC orchestrator (Python + LLM hybrid)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sagui Ettinger" }]
keywords = ["qa", "sdlc", "automation", "testing", "playwright", "allure", "llm", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "anthropic>=0.40",
    "claude-agent-sdk>=0.1",
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2.7",
    "jsonschema>=4.21",
    "tenacity>=9",
    "structlog>=24",
    "httpx>=0.27",
    "python-dotenv>=1",
    "PyYAML>=6",
    "nodeenv>=1.8",
    "psutil>=5.9",
]

[project.optional-dependencies]
allure = ["allure-pytest>=2.13"]
ui = ["flet>=0.28", "flet-desktop>=0.28"]

[project.scripts]
worca-t = "worca_t.cli:app"
worca-t-ui = "worca_t.ui:launch"

[project.urls]
Homepage = "https://github.com/BD-AI-SDLC/worca-t"
Issues = "https://github.com/BD-AI-SDLC/worca-t/issues"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worca_t"]

[tool.hatch.build.targets.wheel.force-include]
"agents" = "worca_t/_resources/agents"
"skills" = "worca_t/_resources/skills"
"schemas" = "worca_t/_resources/schemas"
"templates" = "worca_t/_resources/templates"
"examples" = "worca_t/_resources/examples"
".mcp.json" = "worca_t/_resources/.mcp.json"
".env.example" = "worca_t/_resources/.env.example"
"CLAUDE.md" = "worca_t/_resources/CLAUDE.md"

[tool.hatch.build.targets.sdist]
include = [
    "src/worca_t",
    "agents",
    "skills",
    "schemas",
    "templates",
    "examples",
    ".mcp.json",
    ".env.example",
    "CLAUDE.md",
    "README.md",
    "CHANGELOG.md",
]

# Ruff lint config lives in ruff.toml (takes precedence over [tool.ruff]).

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "pytest-xdist>=3.6",
    "ruff>=0.6",
    "pre-commit>=4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# `-n auto` parallelises across CPU cores (pytest-xdist). The suite is
# heavily I/O-bound (git / subprocess), so this is a large win on multi-core
# machines. Override with `-n 0` for serial debugging / readable output.
addopts = "-ra --strict-markers -n auto"
asyncio_mode = "auto"
markers = [
    "integration: spawns real subprocesses / git or does heavy filesystem work (slower). Run the fast inner loop with `-m 'not integration'`; CI runs everything.",
]
