[project]
name = "qtea"
version = "1.0.0-rc.1"
description = "QTea - Fully autonomous QA SDLC orchestrator (Python + LLM hybrid)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sagui Ettinger" }]
keywords = ["qa", "sdlc", "automation", "testing", "playwright", "allure", "llm", "claude"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "anthropic>=0.40",
    "claude-agent-sdk>=0.1",
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2.7",
    "jsonschema>=4.21",
    "tenacity>=9",
    "structlog>=24",
    "httpx>=0.27",
    "python-dotenv>=1",
    "PyYAML>=6",
    "nodeenv>=1.8",
    "psutil>=5.9",
    "allure-pytest>=2.13",
    "playwright>=1.40",
]

[project.optional-dependencies]
ui = ["flet==0.86.1", "flet-desktop==0.86.1"]

[project.scripts]
qtea = "qtea.cli:app"
qtea-ui = "qtea.ui:launch"

[project.urls]
Homepage = "https://github.com/BD-AI-SDLC/qtea"
Issues = "https://github.com/BD-AI-SDLC/qtea/issues"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qtea"]

[tool.hatch.build.targets.wheel.force-include]
"agents" = "qtea/_resources/agents"
"skills" = "qtea/_resources/skills"
"schemas" = "qtea/_resources/schemas"
"templates" = "qtea/_resources/templates"
"examples" = "qtea/_resources/examples"
".mcp.json" = "qtea/_resources/.mcp.json"
".env.example" = "qtea/_resources/.env.example"
"CLAUDE.md" = "qtea/_resources/CLAUDE.md"

[tool.hatch.build.targets.sdist]
include = [
    "src/qtea",
    "agents",
    "skills",
    "schemas",
    "templates",
    "examples",
    ".mcp.json",
    ".env.example",
    "CLAUDE.md",
    "README.md",
    "CHANGELOG.md",
]

# Ruff lint config lives in ruff.toml (takes precedence over [tool.ruff]).

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "pytest-xdist>=3.6",
    "ruff>=0.6",
    "pre-commit>=4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# `-n auto` parallelises across CPU cores (pytest-xdist). The suite is
# heavily I/O-bound (git / subprocess), so this is a large win on multi-core
# machines. Override with `-n 0` for serial debugging / readable output.
addopts = "-ra --strict-markers -n auto"
asyncio_mode = "auto"
markers = [
    "integration: spawns real subprocesses / git or does heavy filesystem work (slower). Run the fast inner loop with `-m 'not integration'`; CI runs everything.",
    "no_stub_aux_agents: opt out of the autouse aux-agent (debug-RCA / fix-proposal) transport stub in tests/conftest.py.",
    "use_ambient_playwright_mcp: opt out of the autouse Playwright-MCP install isolation in tests/conftest.py (for tests exercising the npx→node rewrite / resolver).",
]
